refactor: documentação em alguns arquivos e consertando estilos

--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1,7 +1,14 @@
+/* ESTILIZAÇÃO DA TELA PRINCIPAL DO DASHBOARD ADMIN */
+
 main {
     display: flex;
+    flex: 1;
 }
 
-.footer {
-    width: 100%;
+.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
+
+.dashboard {}
