--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -1,4 +1,5 @@
 /* ESTILIZAÇÃO DO COMPONENTE FOOTER  */
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .footer {
     display: flex;
@@ -33,6 +34,8 @@
         flex-direction: column;
         justify-content: space-evenly;
         font-size: 1rem;
+        font-family: "Lexend", sans-serif;
+        font-weight: 500;
     }
 
     .footer-text {
