--- a/public/assets/css/sidebar-admin-component.css
+++ b/public/assets/css/sidebar-admin-component.css
@@ -10,6 +10,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+}
+
+.sidebar-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .sidebar-header {
@@ -65,7 +73,7 @@ hr {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    gap: 1.25rem;
+    gap: 1rem;
     font-size: 1.5rem;
     padding: 0.5rem;
 }
@@ -98,5 +106,16 @@ hr {
 
     .sidebar-toggle-btn {
         display: block;
+    }
+}
+
+@media (max-width: 1156px) {
+    .sidebar-table-item {
+        font-size: 1rem;
+        padding: 0.5rem;
+    }
+
+    .sidebar-name-title {
+        font-size: 1.5rem;
     }
 }
