CRUD Noticias - Com front

--- a/public/assets/css/noticia.css
+++ b/public/assets/css/noticia.css
@@ -157,6 +157,7 @@ input::placeholder{
 .footer {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 10;
 
     margin-top: 250;
