--- a/public/assets/css/ver-noticia.css
+++ b/public/assets/css/ver-noticia.css
@@ -1,54 +1,51 @@
 h1 {
-    width: 1094px;
-    height: 50px;
-    top: 316px;
-    left: 30px;
-
-   font-family: Georgia;
-    font-size: 100px;
+    width: 80%; 
+    max-width: 1094px;
+    height: auto; 
+    margin: 0; 
+    padding: 15px;
+    
+    font-family: Georgia;
+    font-size: 6em; 
     font-weight: 400;
-    line-height: 113.62px;
+    line-height: 1.2; 
     letter-spacing: -0.05em;
     text-align: left;
 
-   color: #209DD5;
-   margin-bottom: 80px;
-   padding: 15px;
+    color: #209DD5;
+    margin-bottom: 5%; /
 }
 
-img{
-    width: 1444px;
-    height: 643px;
-    top: 426px;
+img {
+    width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
+    height: 643px; 
 }
 
 h2 {
+    width: 80%; 
+    max-width: 1003px; 
+    height: auto;
     padding: 15px;
-    width: 1003px;
-    height: 96px;
-    top: 1129px;
-    left: 30px;
 
     font-family: Georgia;
-    font-size: 40px;
+    font-size: 2.5em;
     font-weight: 400;
-    line-height: 45.45px;
+    line-height: 1.2;
     text-align: left;
 
     color: #A0A0A0;
 }
 
 p {
-    padding: 15PX;
-    width: 1324px;
-    height: 272px;
-    top: 1285px;
-    left: 30px;
+    width: 90%; 
+    max-width: 1324px; 
+    height: auto; 
+    padding: 15px;
 
     font-family: Georgia;
-    font-size: 30px;
+    font-size: 1.5em;
     font-weight: 400;
-    line-height: 34.09px;
+    line-height: 1.2; 
     text-align: left;
 
     color: #000000;
@@ -56,10 +53,10 @@ p {
 
 .footer {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding: 10px;
-    margin-top: 250;
+    margin-top: 5%; 
 }
 
 .voltar {
@@ -69,20 +66,48 @@ p {
 }
 
 #voltar{
-    width: 30px;
-    top: 1316px;
-    left: 165px;
+    width: 2em; 
+    height: auto;
+  
     border: 4px 4px 4px 4px;
 }
 
 .voltar span{
     font-family: Georgia;
-    font-size: 40px;
+    font-size: 2.5em;
     font-weight: 400;
-    line-height: 45.45px;
+    line-height: 1.2;
     text-align: left;
     color: #209DD5;
 
     padding: 10px;
     cursor: pointer;
 }
+
+/* Media Queries para responsividade */
+@media (max-width: 1200px) {
+    h1, h2, p {
+        font-size: 5em;
+    }
+
+    .footer {
+        flex-direction: start; /* Alinha itens verticalmente em telas menores */
+    }
+}
+
+@media (max-width: 768px) {
+    h1, h2, p {
+        font-size: 4em; 
+    }
+
+    .footer {
+        padding: 5px; 
+    }
+
+    #voltar {
+        width: 1.5em; 
+    }
+}
+
+
+
