--- a/public/assets/css/ver-noticia.css
+++ b/public/assets/css/ver-noticia.css
@@ -1,33 +1,24 @@
-h1 {
+.container h1 {
     width: 80%; 
-    max-width: 1094px;
     height: auto; 
     margin: 0; 
     padding: 15px;
     
     font-family: Georgia;
-    font-size: 6em; 
+    font-size: 3em; 
     font-weight: 400;
     line-height: 1.2; 
     letter-spacing: -0.05em;
     text-align: left;
 
     color: #209DD5;
-    margin-bottom: 5%; /
+    margin-bottom: 1%; /
 }
 
-img {
-    width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
-    height: 643px; 
-    object-fit: cover;
-}
-
-h2 {
-    width: 80%; 
-    max-width: 1003px; 
+.container  {
+    width: 100vw; 
     height: auto;
     padding: 15px;
-
     font-family: Georgia;
     font-size: 2.5em;
     font-weight: 400;
@@ -35,6 +26,15 @@ h2 {
     text-align: left;
 
     color: #A0A0A0;
+}
+.container img {
+    width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
+    height: 643px; 
+    object-fit: cover;
+}
+
+.container h3{
+    font-size: 10;
 }
 
 p {
@@ -52,7 +52,7 @@ p {
     color: #000000;
 }
 
-.footer {
+.volteBar {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -69,7 +69,6 @@ p {
 #voltar{
     width: 2em; 
     height: auto;
-  
     border: 4px 4px 4px 4px;
 }
 
@@ -85,19 +84,20 @@ p {
     cursor: pointer;
 }
 
+
 @media (max-width: 1200px) {
     h1, h2, p {
-        font-size: 5em;
+        font-size: 2em;
     }
 }
 
 @media (max-width: 768px) {
     h1, h2, p {
-        font-size: 4em; 
+        font-size: 2em; 
     }
 
-    .footer {
-        padding: 5px; 
+    .volteBar {
+        padding: 3px; 
     }
 
     #voltar {
