--- a/public/assets/css/ver-noticia.css
+++ b/public/assets/css/ver-noticia.css
@@ -17,8 +17,7 @@
 
 .container  {
     width: 100vw; 
-    height: auto;
-    padding: 15px;
+ 
     font-family: Georgia;
     font-size: 2.5em;
     font-weight: 400;
@@ -31,17 +30,27 @@
     width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
     height: 643px; 
     object-fit: cover;
+
 }
 
 .container h3{
     font-size: 10;
 }
 
+.container h2{
+    margin: 15;
+}
+
+.container p{
+    margin: 15;
+}
+
 p {
     width: 90%; 
     max-width: 1324px; 
     height: auto; 
-    padding: 15px;
+    padding: 25px;
+
 
     font-family: Georgia;
     font-size: 1.5em;
@@ -88,6 +97,7 @@ p {
 @media (max-width: 1200px) {
     h1, h2, p {
         font-size: 2em;
+    
     }
 }
 
