--- a/public/assets/css/legislacao.css
+++ b/public/assets/css/legislacao.css
@@ -7,26 +7,21 @@
     height: 1655;
     top: -2512px;
     left: 8649px;
-    gap: 0px;
-    opacity: 0px;
     padding: 100px;
 }
 
 .cardAdd{
     margin:auto;
     width: 1231px;
-    height: 1268px;
     top: 88px;
     left: 105px;
-    gap: 0px;
     border-radius: 20px 20px 20px 20px;
-    opacity: 0px;
     background: #F8F8F8;
     box-shadow: 0px 4px 4px 0px #00000040;
-
+    padding: 20;
 }
 
-h1{
+.container h1{
     margin: auto;
     padding: 30px;
     width: 287px;
@@ -43,7 +38,7 @@ h1{
     color: #209DD5; 
 }
 
-hr{
+hr {
     margin-block-start: 70px; /*provissorio*/
 
     width: 650px;
@@ -154,7 +149,7 @@ input::placeholder{
     text-align: left;
 }
 
-.footer {
+.nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
