Correções Legislação e Noticia

--- a/public/assets/css/noticiario.css
+++ b/public/assets/css/noticiario.css
@@ -29,6 +29,7 @@ span{
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: auto;
 }
 
 .card_container{
@@ -125,6 +126,10 @@ span{
     }
     .card-body p {
         font-size: 20px;
+    }
+
+    .container {
+        height: 70%;
     }
 
     .card_container{
