--- a/public/assets/css/legislacao.css
+++ b/public/assets/css/legislacao.css
@@ -1,227 +1,221 @@
-.container{
+.container {
+
+
     display: flex;
     align-items: center;
     justify-content: center;
     margin: auto;
-    width: 1440px;
-    height: 1655;
+    max-width: 1440px;
+    width: 100%; 
+
+   /* height: 1655;
     top: -2512px;
-    left: 8649px;
-    padding: 100px;
+    left: 8649px;*/
+
+    padding: 100px; /*5%*/
 }
 
-.cardAdd{
-    margin:auto;
-    width: 1231px;
-    top: 88px;
-    left: 105px;
+.cardAdd {
+    margin: auto;
+    max-width: 1231px; 
+    width: 100%; 
+    /*top: 88px;
+    left: 105px;*/
     border-radius: 20px 20px 20px 20px;
     background: #F8F8F8;
     box-shadow: 0px 4px 4px 0px #00000040;
-    padding: 20;
+
+    padding: 20px; 
 }
 
-.container h1{
+.container h1 {
     margin: auto;
     padding: 30px;
-    width: 287px;
+
+   /* width: 287px;
     height: 74px;
     top: 208px;
-    left: 552px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: Georgia; /*Falta importar*/
-    font-size: 65px;
+    left: 552px;*/;
+    
+    font-family: Georgia; 
+    font-size: 4vw; 
     font-weight: 400;
-    line-height: 73.85px;
-    text-align: left;
-    color: #209DD5; 
+    line-height: 1.2; 
+    text-align: center; 
+    color: #209DD5;
 }
 
 hr {
-    margin-block-start: 70px; /*provissorio*/
+    margin-block-start: 30px; 
+    max-width: 650px;
+    width: 100%;
 
-    width: 650px;
-    height: 0px;
+   /* height: 0px;
     top: 327px;
     left: 371px;
     gap: 0px;
+    opacity: 0px;*/
     border: 1px 0px 0px 0px;
-    opacity: 0px;
 }
 
-.divForm{
+.divForm {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 50;
+    margin: 50px; 
+    
 }
 
-input{
-    margin: 10; /*provissorio*/
-    padding: 10;
-
+input {
+    margin: 10px; 
+    padding: 10px;
     border: 1px solid #000000;
-    gap: 0px;
     border-radius: 10px 10px 10px 10px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
     cursor: pointer;
-
 }
 
-input::placeholder{
-/*::-vebkit-input-placeholder{*/
-    padding: 10;
-    width: 164px; 
+input::placeholder {
+    padding: 10px;
+    /*width: 164px;
     height: 39px;
     top: 583px;
-    left: 235px;
-    gap: 0px;
-    opacity: 0px;
-    
+    left: 235px;*/
     font-family: Georgia;
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 45.45px;
+    font-size: 1.5em; 
+    /*font-weight: 400;
+    line-height: 45.45px;*/
     text-align: left;
-
     color: #000;
 }
 
-
-#titulo, #resumo, #url{
+.form {
     width: 1016px;
-    height: 94px;
-    top: 555px;
-    left: 215px;  
 }
 
-#desc {  
-    width: 1016px;
-    height: 393px;
-    top: 699px;
-    left: 215px;
-}
+#titulo, #resumo, #url, #desc {
+    width: 100%;
+    height: 94px; 
 
-.addImg{
-    margin: 10; /*provissorio*/
-    padding: 10;
-
-    border: 1px solid #000000;
-    gap: 0px;
-    border-radius: 10px 10px 10px 10px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
-    cursor: pointer;
-    position: relative;
-    display: flex;
-
-}
-
-.addImg img{
-    width: 50px;
-    height: 50px;
-    top: 1164px;
-    left: 235px;
-    padding: 6.25px 4.17px 6.25px 4.17px;
-    gap: 0px;
-    opacity: 0px;
-}
-
-.addImg input{
-    display: none;
-}
-
-.addImg span {
-    padding-left: 20;
-    height: 39px;
-    top: 1169px;
-    left: 317px;
-    gap: 0px;
-    opacity: 0px;
-
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #000;
+    border-radius: 10px;
     font-family: Georgia;
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 45.45px;
-
-    text-align: left;
 }
+
+#desc {
+    height: 300px; 
+}
+
+
 
 .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10;
-
-    margin-top: 250;
+    padding: 10px; 
+    margin-top: 150;
 }
 
-#save, #edit{
+#save, #edit {
     width: 80px;
     height: 70px;
-    top: 1291px;
-    left: 1246px;
+    /*top: 1291px;
+    left: 1246px;*/
     padding: 8.33px 4.17px 8.33px 6.25px;
     cursor: pointer;
 }
 
- #voltar{
+#voltar {
     width: 30px;
-    top: 1316px;
-    left: 165px;
+    /* top: 1316px;
+    left: 165px;*/
     border: 4px 4px 4px 4px;
     cursor: pointer;
     display: inline-block;
 }
 
-.voltar span{
-    width: 113px;
+.voltar span {
+    /*    width: 113px;
     height: 39px;
     top: 1296px;
     left: 180px;
-
+    */
     font-family: Georgia;
-    font-size: 40px;
+    font-size: 1.5em; 
     font-weight: 400;
-    line-height: 45.45px;
-    text-align: left;
+    line-height: 1.2;
     color: #209DD5;
-
-    padding: 10px;
+    padding: 10px; 
     cursor: pointer;
 }
 
 .editar {
     display: flex;
     align-items: center;
-    
 }
 
-.editar span{
-    width: 115px;
-    height: 39px;
-
+.editar span {
+    /*width: 115px;
+    height: 39px;*/
 
     font-family: Georgia;
-    font-size: 40px;
-    font-weight: 400;
+    font-size: 1.5em;
+    font-weight: 400; 
 
-    text-align: left;
+    /*text-align: left;*/
     color: #209DD5;
 
-
     cursor: pointer;
+    
 }
 
-#editar{
+#editar {
     width: 50px;
     height: 50px;
-    top: 1291px;
-    left: 1256px;
+    /*  top: 1291px;
+    left: 1256px;*/
     padding: 6.25px;
-    
-    cursor: pointer;    
+
+    cursor: pointer;
     display: inline-block;
+}
+
+
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 10%; 
+    }
+
+    .container h1 {
+        font-size: 8vw; 
+    }
+
+    .nav {
+        flex-direction: column; 
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .container {
+        width: 100%; 
+    }
+
+    .container h1 {
+        font-size: 10vw; 
+    }
+
+    .nav {
+        margin-top: 20px;
+    }
+
+    .nav #save, .nav #edit {
+        width: 100px; 
+        height: 80px;
+    }
+
+    #voltar {
+        width: 50px;
+    }
 }
