--- a/public/assets/css/ver-noticia.css
+++ b/public/assets/css/ver-noticia.css
@@ -98,6 +98,8 @@ p {
     h1, h2, p {
         font-size: 2em;
     }
+
+
     .container img {
         width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
         height: auto; 
@@ -106,7 +108,7 @@ p {
 }
 
 @media (max-width: 768px) {
-    h1, h2, p {
+    .container h1, h2, p {
         font-size: 2em; 
     }
 
