--- a/public/assets/css/noticiario.css
+++ b/public/assets/css/noticiario.css
@@ -90,7 +90,12 @@ span{
     font-weight: 400;
     line-height: 34.09px;
     text-align: left;
-    
+
+    overflow: hidden; 
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 5; 
+    -webkit-box-orient: vertical;  
 }
 
 @media (max-width: 1024px) {
