--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -8,12 +8,405 @@ body {
 
 /* Garante que o contêiner principal ocupe pelo menos a altura da tela */
 .container {
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
 }
 
 /* Garante que o conteúdo principal ocupe o espaço restante */
 main {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+}
+
+.blue-bar {
+    border: none;
+    align-self: center;
+    height: 50%;
+    max-height: 140px;
+    min-width: 8px;
+    border-radius: 0.15rem;
+    background-color: #22A1D8;
+    margin: 10px 0;
+}
+
+.article {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0rem 0rem 2rem 2rem;
+}
+
+.section-header {
+    display: flex;
+    flex-direction: column;
+    padding-top: 2rem;
+    gap: 1rem;
+}
+
+@media (min-width: 1440px) {
+    .section-header {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 1280px) {
+    .section-header {
+        max-width: 600px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .section-header {
+        max-width: 800px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .section-header-title {
+        font-size: 3.0625rem !important;
+    }
+
+    .section-header-subtitle {
+        font-size: 1.5rem !important;
+    }
+
+    .section-header-description {
+        font-size: 1.2rem !important;
+    }
+}
+
+@media (max-width: 767px) {
+    .article {
+        flex-direction: column;
+        padding: 0 !important;
+    }
+
+    .section-header {
+        padding: 1rem 2rem !important;
+        padding-top: 0 !important;
+    }
+
+    .section-header-description {
+        padding-bottom: 2rem;
+    }
+
+    .section-header-img {
+        /* display: none; */
+        min-width: 300px !important;
+        max-width: 500px !important;
+        align-self: flex-end;
+    }
+
+    .section-legislacao {
+        flex-direction: column;
+    }
+
+    .section-legislacao-find {
+        width: 100% !important;
+    }
+
+    .section-legislacao-find {
+        width: 100% !important;
+    }
+
+    .section-legislacao-form {
+        width: 100% !important;
+    }
+
+    .section-legislacao-text {
+        width: 100% !important;
+    }
+
+    .form-contact-us-actions {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .form-contact-us-actions-data {
+        width: 100% !important;
+    }
+
+    .form-input {
+        width: 100% !important;
+    }
+
+    .form-title {
+        font-size: 3rem !important;
+    }
+
+    .form-fields-textarea {
+        height: 180px !important;
+    }
+
+    .form-contact-us-actions-text {
+        width: 100% !important;
+        gap: 2rem;
+    }
+
+    .form-input::placeholder {
+        font-size: 1.35rem !important;
+    }
+}
+
+.section-header-title {
+    font-size: 4.0625rem;
+}
+
+.section-header-subtitle {
+    font-size: 2.5rem;
+    color: #209DD5;
+}
+
+.section-header-description {
+    padding-top: 2rem;
+    font-size: 1.875rem;
+}
+
+.section-header-img {
+    min-width: 400px;
+    /* max-width: 600px; */
+    max-height: 800px;
+}
+
+/* legislacao */
+.section-leg {
+    width: 100%;
+    max-height: 500px;
+    background-color: #eeeeeee3;
+    display: flex;
+    justify-content: center;
+    min-height: 220px;
+}
+
+.section-legislacao {
+    display: flex;
+    padding: 5rem 2rem;
+    max-width: 1280px;
+    justify-content: space-between;
+    gap: 2rem;
+    width: 100%;
+}
+
+.section-legislacao-find {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 48%;
+}
+
+.section-legislacao-title {
+    font-size: 2.2rem;
+    font-weight: 700;
+    color: #209DD5;
+    padding-bottom: 1.25rem;
+}
+
+.section-legislacao-select {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+.section-legislacao-select:focus {
+    outline: none;
+    border-color: #209DD5;
+}
+
+.section-legislacao-select::-ms-expand {
+    display: none;
+}
+
+.section-legislacao-form {
+    position: relative;
+    display: inline-block;
+    width: 90%;
+}
+
+.section-legislacao-select:hover {
+    cursor: pointer;
+}
+
+.section-legislacao-form i {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    pointer-events: none;
+    color: #000;
+    font-size: 20px;
+}
+
+.material-symbols-outlined.select-arrow {
+    pointer-events: none;
+}
+
+.section-legislacao-text {
+    width: 40%;
+    display: flex;
+    gap: 1rem;
+    align-items: center
+}
+
+.section-legislacao-description {
+    font-size: 1.875rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 10;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    word-break: break-all;
+}
+
+/* noticias */
+.section-noticias {
+    padding: 7rem 0;
+    width: 100%;
+    overflow: hidden;
+    /* max-width: 1440px; */
+}
+
+.section-noticias-info {
+    width: 100%;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-noticias-title {
+    font-size: 3.5rem;
+    font-weight: 400;
+    padding-bottom: 1.25rem;
+}
+
+.section-noticias-link {
+    font-size: 1.7rem;
+    font-weight: 700;
+    color: #209DD5;
+    padding-bottom: 2rem;
+}
+
+.section-noticias-carrossel {
+    padding: 1rem 0;
+    width: 100%;
+    height: 100%;
+}
+
+.section-noticias-carrossel .slick-slide {
+    margin: 0 15px;
+}
+
+.carrossel-img {
+    width: 100%;
+    object-fit: cover;
+    aspect-ratio: 15/10;
+}
+
+/* formulario fale conosco */
+.form-contact {
+    width: 100%;
+    background-color: #209DD5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-contact-us {
+    max-width: 1280px;
+    width: 100%;
+    color: white;
+    padding: 5rem 2.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.form-title {
+    font-size: 3.125rem;
+}
+
+.form-contact-us-actions {
+    max-width: 1280px;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 3rem;
+}
+
+.form-contact-us-actions-data {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 40%;
+}
+
+.form-input {
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    padding: 1rem 0.75rem;
+    border: 1px solid #FFFFFF;
+    background-color: #47a7d3;
+    color: #FFFFFF;
+}
+
+.form-input::placeholder {
+    color: #FFFFFF;
+    font-size: 1.75rem;
+}
+
+.form-input:focus {
+    box-shadow: 0 0 0 3px #47a7d3;
+    outline: none;
+    transition: ease 0.2s;
+}
+
+.form-contact-us-actions-text {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    justify-content: space-between;
+}
+
+.form-fields-textarea {
+    font-size: 1.5rem;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    border: 1px solid #FFFFFF;
+    background-color: #47a7d3;
+    height: 75%;
+    color: #FFFFFF;
+    resize: none;
+}
+
+.form-fields-textarea::placeholder {
+    color: #FFFFFF;
+}
+
+.form-fields-textarea:focus {
+    box-shadow: 0 0 0 3px #47a7d3;
+    outline: none;
+    transition: ease 0.2s;
+}
+
+.form-button {
+    border: 1px solid #FFFFFF;
+    border-radius: 0.5rem;
+    color: #FFFFFF;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    width: 50%;
+    align-self: center;
+    transition: ease-in-out 0.2s;
+}
+
+.form-button:hover {
+    background-color: #08628b;
+    transform: scale(1.02);
 }
