--- a/public/assets/css/noticiario.css
+++ b/public/assets/css/noticiario.css
@@ -1,8 +1,8 @@
-body{
+body {
     padding: 40px;
 }
 
-.titulo{
+.titulo {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,23 +15,23 @@ body{
     max-width: 315px;
     height: auto;
     font-family: Georgia;
-    font-size: 5vw; 
+    font-size: 5vw;
     display: flex;
     margin-bottom: 50px;
     justify-content: center;
 }
 
-span{
-    color:#209DD5;
+.ponto {
+    color: #209DD5;
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.card_container{
+.card_container {
     display: grid;
     grid-template-columns: repeat(2, 1fr 0fr);
     gap: 20px;
@@ -39,7 +39,7 @@ span{
     margin: 0;
 }
 
-.cards{
+.cards {
     overflow: hidden;
     width: 100%;
     max-width: 700;
@@ -47,7 +47,7 @@ span{
 
 }
 
-.cards img{
+.cards img {
     width: 100%;
     object-fit: cover;
     height: auto;
@@ -55,17 +55,17 @@ span{
 }
 
 
-.notBar{
+.notBar {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-#ir{
+#ir {
     width: 30px;
 }
 
-.notBar h2 { 
+.notBar h2 {
     font-family: Georgia;
     font-size: 40px;
     font-weight: 700;
@@ -75,7 +75,7 @@ span{
     padding: 25px 0 0 0;
 }
 
-.card-body{
+.card-body {
     display: flex;
     justify-content: left;
     padding-top: 30px;
@@ -83,22 +83,24 @@ span{
 }
 
 
-.card-body p { 
+.card-body p {
     font-family: Georgia;
     font-size: 30px;
     font-weight: 400;
     line-height: 34.09px;
     text-align: left;
-    
+
 }
 
 @media (max-width: 1024px) {
     h1 {
         font-size: 48px;
     }
+
     .notBar h2 {
         font-size: 32px;
     }
+
     .card-body p {
         font-size: 24px;
     }
@@ -109,10 +111,11 @@ span{
         font-size: 55px;
     }
 
-    .notBar{
+    .notBar {
         justify-content: space-between;
         align-items: center;
     }
+
     .notBar h2 {
         font-size: 30px;
         font-weight: 300;
@@ -120,26 +123,27 @@ span{
         padding: 15px 0 0 0;
     }
 
-    #ir{
+    #ir {
         width: 20px;
     }
+
     .card-body p {
         font-size: 20px;
     }
 
-    .card_container{
+    .card_container {
         display: flex;
         flex-direction: column;
         margin: 10;
         max-width: 100%;
-        
+
     }
 
-    .cards{
+    .cards {
         overflow: hidden;
         width: 100%;
         max-width: 330;
         margin: 15px;
     }
-    
+
 }
