--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -193,16 +193,37 @@ main {
     padding: 1rem 0;
     width: 100%;
     height: 100%;
+    position: relative;
 }
 
 .section-noticias-carrossel .slick-slide {
     margin: 0 15px;
 }
 
+.carrossel-item {
+    position: relative;
+}
+
+.carrossel-titulo {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    color: white;
+    font-weight: 700;
+    font-size: 2.25rem;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #7473734a;
+    word-break: break-all;
+    padding: 10px;
+    z-index: 10;
+}
+
 .carrossel-img {
     width: 100%;
     object-fit: cover;
     aspect-ratio: 15/10;
+    display: block;
+    height: auto;
 }
 
 /* formulario fale conosco */
