Fix: Correções nas Rotas

--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -11,4 +11,15 @@ main {
     min-height: 100vh;
 }
 
-.dashboard {}
+.dashboard{
+    display: flex;
+}
+
+.logo_pref{
+    width: auto;
+    object-fit: contain;
+    justify-content: center;
+    align-content: center;
+    opacity: 15%;
+    z-index: -99;
+}
