--- a/public/assets/css/sidebar-admin-component.css
+++ b/public/assets/css/sidebar-admin-component.css
@@ -1,17 +1,17 @@
 /* ESTILIZAÇÃO DO COMPONENTE SIDEBAR DO DASHBOARD ADMIN  */
 
 .sidebar {
-    width: 25%;
+    width: 20%;
     height: 100vh;
     padding: 2rem 1.25rem;
     background: #209DD5;
     color: white;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
+
 
 .sidebar-container {
     width: 100%;
@@ -31,7 +31,11 @@
 }
 
 .sidebar-name-title {
-    font-size: 2.5rem;
+    padding: 2px;
+    text-align: center;
+    line-height: 150%;
+    font-size: 2vw;
+    font-weight: bold;
 }
 
 .sidebar-btn {
@@ -100,7 +104,7 @@ hr {
 @media (max-width: 900px) {
     .sidebar {
         display: none;
-        width: 70%;
+        width: 100%!important;
         padding-top: 4rem;
     }
 
