fix: botao login e dashboard

--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -195,8 +195,8 @@
     }
 
     .navbar-login-button {
-        font-size: 16px;
-        padding: 0.25rem;
+        font-size: 1.125rem;
+        padding: 0.5rem 1rem;
     }
 }
 
