feat: salvamento de informações do contato na db

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -376,6 +376,38 @@ main {
     transform: scale(1.02);
 }
 
+.alert {
+    padding: 15px;
+    background-color: #f44336;
+    color: white;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    border-radius: 5px;
+    position: relative;
+}
+
+.alert ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.alert ul li {
+    margin-bottom: 10px;
+}
+
+.alert .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+
 
 @media (min-width: 1440px) {
     .section-header {
