Fix: Correções Front Samobilidade

--- a/public/assets/css/footer.css
+++ b/public/assets/css/footer.css
@@ -7,7 +7,7 @@
     justify-content: space-around;
     background: black;
     color: white;
-    height: 120px;
+    height: 10vh;
     align-items: center;
     font-size: 1.125rem;
     font-weight: 500;
