--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1,9 +1,11 @@
 /* ESTILIZAÇÃO DA TELA PRINCIPAL DO DASHBOARD ADMIN */
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-main {
+.main_dashboard {
     display: flex;
+    align-items: center;
     flex: 1;
+    max-height: 90vh;
 }
 
 .container {
@@ -18,6 +20,8 @@ main {
     padding: 1rem;
     font-family: "Lexend", sans-serif;
     gap: 1rem;
+    width: 100%;
+    height: 100%;
 }
 
 .logo_pref{
@@ -27,4 +31,19 @@ main {
     align-content: center;
     opacity: 15%;
     z-index: -99;
+}
+
+@media (max-width: 900px) {
+    .main_dashboard {
+        display: block;
+    }
+
+    .dashboard{
+        height: 80vh;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
 }
