--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -35,8 +35,10 @@ main {
 .article {
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    padding: 0rem 0rem 2rem 2rem;
+    align-items: center;
+    max-width: 1920px;
+    height: 85vh;
+    padding: 0rem 2rem 2rem 2rem;
 }
 
 .section-header {
@@ -47,17 +49,21 @@ main {
 }
 
 .section-header-title {
-    font-size: 4.0625rem;
+    font-size: 3rem;
+    font-weight: bold;
+    color: #343434;
 }
 
 .section-header-subtitle {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    margin-top: -5px;
+    font-weight: bold;
     color: #209DD5;
 }
 
 .section-header-description {
     padding-top: 2rem;
-    font-size: 1.875rem;
+    font-size: 1.5rem;
 }
 
 .section-header-img {
@@ -79,7 +85,7 @@ main {
 .section-legislacao {
     display: flex;
     padding: 5rem 2rem;
-    max-width: 1280px;
+    max-width: 1920px;
     justify-content: space-between;
     gap: 2rem;
     width: 100%;
@@ -93,8 +99,8 @@ main {
 }
 
 .section-legislacao-title {
-    font-size: 2.2rem;
-    font-weight: 700;
+    font-size: 2rem;
+    font-weight: bold;
     color: #209DD5;
     padding-bottom: 1.25rem;
 }
@@ -103,6 +109,7 @@ main {
     width: 100%;
     padding: 10px;
     font-size: 16px;
+    line-height: 30px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
@@ -136,7 +143,7 @@ main {
     right: 10px;
     transform: translateY(-50%);
     pointer-events: none;
-    color: #000;
+    color: #6b6b6b;
     font-size: 20px;
 }
 
@@ -152,17 +159,18 @@ main {
 }
 
 .section-legislacao-description {
-    font-size: 1.875rem;
+    font-size: 1.5rem;
     display: -webkit-box;
     -webkit-line-clamp: 10;
+    line-height: 40px;
     overflow: hidden;
     -webkit-box-orient: vertical;
-    word-break: break-all;
+    word-break:normal;
 }
 
 /* noticias */
 .section-noticias {
-    padding: 7rem 0;
+    padding: 7em 0 1em 0;
     width: 100%;
     overflow: hidden;
     /* max-width: 1440px; */
@@ -177,17 +185,54 @@ main {
 }
 
 .section-noticias-title {
-    font-size: 3.5rem;
-    font-weight: 400;
+    font-size: 2rem;
+    margin-top: -5px;
+    font-weight: bold;
     padding-bottom: 1.25rem;
 }
 
 .section-noticias-link {
-    font-size: 1.7rem;
-    font-weight: 700;
-    color: #209DD5;
-    padding-bottom: 2rem;
+    position: relative;
+    padding: 0.5rem 1rem;
+    border: 1px solid;
+    border-radius: 10px;
+    font-size: 1.25rem;
+    display: inline-block;
+    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.281),
+        5px 5px 20px 0px rgba(0, 0, 0, .1),
+        4px 4px 5px 0px rgba(0, 0, 0, .1);
+    outline: none;
+    transition: color 0.3s ease, border-color 0.3s ease;
+    cursor: pointer;
+    overflow: hidden;
+    margin-bottom: 25px;
 }
+
+.section-noticias-link::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #209DD5;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+}
+
+.section-noticias-link:hover {
+    border-color: #209DD5;
+    color: #fff;
+}
+
+.section-noticias-link:hover::before {
+    transform: scaleX(1);
+}
+
+
+
 
 .section-noticias-carrossel {
     padding: 1rem 0;
@@ -202,6 +247,8 @@ main {
 
 .carrossel-item {
     position: relative;
+    background-image: linear-gradient(45deg, rgba(14, 153, 233, 0.815) 15% , rgba(82, 181, 238, 0.801) 50%);
+    border-radius: 20px;
 }
 
 .carrossel-titulo {
@@ -224,6 +271,8 @@ main {
     aspect-ratio: 15/10;
     display: block;
     height: auto;
+    border-radius: 20px;
+    -webkit-mask-image: linear-gradient(to top, transparent 5%, black 70%);
 }
 
 /* formulario fale conosco */
