--- a/public/assets/css/indexNoticia.css
+++ b/public/assets/css/indexNoticia.css
@@ -1,124 +1,166 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 88%;
-    /*width: 100%;*/
+body {
+    font-family: Georgia, serif;
 }
 
 .noticias {
     display: flex;
+    align-items: flex-start;
+    flex: 1;
+    height: auto;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.dashboard {
+    display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
-    margin: 20px;
-
     width: 100%;
-    max-width: 1200px;
 }
 
 .noticias h1 {
     width: 100%;
     max-width: 236px;
-
-   /* height: 74px;
-    top: 88px;
-    left: 810px;*/
-
     font-family: Georgia, serif;
-    font-size: 65px;
+    font-size: 43px;
     font-weight: 400;
-    line-height: 73.85px;
-
-    text-align: center; 
-
+    padding-top: 25px;
+    text-align: center;
     color: #000000;
-    margin: 10px ;
 }
 
-hr {
-    margin-block-start: 30px; 
+.line {
     max-width: 650px;
     width: 100%;
-
-   /* height: 0px;
-    top: 327px;
-    left: 371px;
-    gap: 0px;
-    opacity: 0px;*/
+    margin: 25px 0 25px 0;
     border: 1px 0px 0px 0px;
 }
 
-#add {
-    width: 142px;
+.form_busca{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: auto;
+    width: 25vw;
+    padding-bottom: 20px;
+}
+
+.form_busca span{
+    position: relative;
+    right: 30px;
+    color: darkgray;
+    cursor: pointer;
+}
+
+.utilitarios{
+    display: flex;
+    flex-direction: row;
+    align-items:flex-start ;
+    width: 85%;
+    justify-content: space-between;
+}
+
+.barra_de_busca{
+    width: 100%;
     height: 39px;
     border-radius: 10px 10px 10px 10px;
     border: 1px solid #000000;
-
-    /*top: 250px;
-    left: 857px; */
-
     display: flex;
     justify-content: center;
     text-align: center;
     align-items: center;
-    margin: 20px;
 }
 
-#add span{
-   /* width: 107px;
-    height: 43px;
-    top: 248px;
-    left: 887px;
-    
-    gap: 10px;*/
-    padding: 10px;
-   
+#add {
+    background: linear-gradient(to left, #ffffff 50%, rgb(91, 199, 127) 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    width: 145px;
+    height: 39px;
+    border-radius: 10px;
+    border: 1px solid #000000;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    color: black; /* Cor inicial do texto */
+    transition: background-position 0.5s ease, color 0.5s ease;
+}
+
+#add:hover {
+    background-position: left bottom;
+    color: white; /* Cor do texto ao passar o mouse */
 }
 
 #icAdd {
     width: 24px;
     height: 24px;
-    /*  top: 257px;
-    left: 862px;*/
-    padding: 5px 0 0 0;
+    margin-left: -10px;
+    transition: transform 0.5s ease, filter 0.5s ease;
+    filter: brightness(0); /* Ícone fica preto inicialmente */
+}
+
+#add:hover #icAdd {
+    transform: rotate(180deg);
+    filter: brightness(100); /* Ícone fica branco ao passar o mouse */
+}
+
+.pagination .active .page-link {
+    background-color: #013f83!important;
+    color: white;
+    border-color: #007bff;
 }
 
 .allNoticias {
-    padding: 20px;
-    margin: 20px;
-    justify-content: center;
-
-    width: 100%;
-}
-
-.not {
-    width: 100%;
-    max-width: 900px;
-    min-height: 76px;
-    /*  top: 339px;
-    left: 478px;*/
-    border-radius: 10px;
-    border: 1px solid #000000;
-
-    margin: 20px auto;
-
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    width: 100%;
+    height: 75vh;
     align-items: center;
 }
 
-.not p {
-    /*height: 39px;
-    top: 358px;
-    left: 498px;*/
+.not {
+    width: 85%;
+    min-height: 76px;
+    border-radius: 10px;
+    border: 1px solid #000000;
+    margin: 0 0 15px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
 
+.not p {
     font-family: Georgia, serif;
-    font-size: 40px;
+    font-size: 1.5vw;
     font-weight: 400;
     text-align: left;
     padding-left: 15px;
     margin: 0;
+    line-break: normal;
+}
+
+.botoes{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 15vw;
+    padding-right: 15px;
+    font-size: 15px;
+    gap: 15px;
+}
+
+.botoes span{
+    background-color: #209DD5;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
 }
 
 #info, #editar, #delete {
@@ -130,6 +172,20 @@ hr {
     margin: 0 8px;
 }
 
+.form_busca label{
+    position: relative;
+    width: 0;
+    height: 0;
+    top: -10px;
+}
+
+.tags{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
 @media (max-width: 768px) {
     .noticias h1 {
         font-size: 50px;
@@ -138,6 +194,56 @@ hr {
 
     .not p {
         font-size: 30px;
+        padding: 0;
+        text-align: center;
+    }
+
+    .not{
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        align-content: center;
+        min-height: auto;
+        gap: 15px;
+        padding: 10px;
+    }
+
+    .botoes{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 15vw;
+        padding-right: 0px;
+        gap: 15px;
+    }
+
+    .botoes span{
+        background-color: #209DD5;
+        padding: 10px;
+        border-radius: 10px;
+        color: white;
+        font-size: 25px;
+    }
+
+    .utilitarios{
+        flex-direction: column-reverse;
+        align-items: center;
+        padding-bottom: 15px;
+    }
+
+    .allNoticias{
+        height: 100vh;
+    }
+
+    .form_busca{
+        width: 100%;
+    }
+
+    .form_busca label{
+        position: relative;
+        width: 0;
+        height: 0;
+        top: -10px;
     }
 
 }
@@ -148,19 +254,26 @@ hr {
         line-height: 50px;
     }
 
-    .not {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 10px;
-    }
-
     .not p {
         font-size: 24px;
         margin-bottom: 10px;
     }
 
-    .not div {
-        align-self: flex-end;
+}
+
+
+@media (max-height: 700px) {
+    .botoes span{
+        font-size: 20px;
+        background-color: #209DD5;
+        padding: 8px;
+        border-radius: 10px;
+        color: white;
     }
 
+    .not{
+        padding: 5px;
+        min-height: 5vh;
+        margin: 0 0 5px 0;
+    }
 }
