--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -1,78 +1,68 @@
-body {
-    font-family: "Lato", sans-serif;
+main{
+    background-color: rgb(239, 238, 238);
+    font-family: "Lexend", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
 }
 
-.main-head{
-    height: 150px;
-    background: #FFF;
-
+.login_container{
+    background-color: white;
+    box-shadow: 0px 0px 10px rgb(160, 160, 160);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 450px;
+    height: 350px;
+    padding: 15px;
+    border-radius: 10px;
 }
 
-.sidenav {
+img{
+    width: 20vw;
+    padding: 10px 0 20px 0;
+}
+
+.div_form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     height: 100%;
-    overflow: hidden;
+    width: 100%;
 }
 
-
-.main {
-    overflow: hidden;
+.form{
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
 }
 
-form{
-    margin-top: -20%;
-    margin-left: 15%;
+.form-group{
+    width: 100%;
 }
 
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
+.form-group input{
+    height: 70%;
 }
 
-@media screen and (max-width: 450px) {
-    .login-form{
-        margin-top: 10%;
-    }
-
-    .register-form{
-        margin-top: 10%;
-    }
+.botao{
+    color: white;
+    font-weight: bold;
+    background-color: cornflowerblue;
+    transition: 0.5s;
 }
 
-@media screen and (min-width: 768px){
-    .main{
-        margin-left: 40%;
-    }
-
-    .sidenav{
-        width: 40%;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-    }
-
-    .login-form{
-        margin-top: 80%;
-    }
-
-    .register-form{
-        margin-top: 20%;
-    }
+.botao:hover{
+    background-color: rgb(33, 99, 220);
+    transition: 0.5s;
 }
 
-
-.login-main-text{
-    color: #fff;
-}
-
-.login-main-text h2{
-    font-weight: 300;
-}
-
-.btn-black{
-    background-color: #000 !important;
-    color: #fff;
-}
-
-.onibus_img{
-    transform: rotateY(180deg);
+.footer{
+    padding-top: 15px;
+    width: 450px;
+    text-align: center;
 }
