--- a/public/assets/css/sidebar-admin-component.css
+++ b/public/assets/css/sidebar-admin-component.css
@@ -2,7 +2,7 @@
 
 .sidebar {
     width: 20%;
-    height: 100vh;
+    height: 105vh;
     padding: 2rem 1.25rem;
     background: #209DD5;
     color: white;
@@ -34,7 +34,7 @@
     padding: 2px;
     text-align: center;
     line-height: 150%;
-    font-size: 2vw;
+    font-size: 1.5vw;
     font-weight: bold;
 }
 
@@ -43,7 +43,7 @@
     gap: 0.5rem;
     padding: 0.5rem;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 200;
     align-items: center;
 }
@@ -60,9 +60,7 @@ hr {
 
 .sidebar-table {
     text-decoration: none;
-    width: 100%;
     padding: 1.5rem 1rem;
-
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -78,7 +76,7 @@ hr {
     justify-content: flex-start;
     align-items: center;
     gap: 1rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     padding: 0.5rem;
 }
 
@@ -90,21 +88,22 @@ hr {
 
 .sidebar-toggle-btn {
     display: none;
-
     position: fixed;
-
     top: 20px;
     left: 20px;
 }
 
 .sidebar.show {
+    transition: 1s;
     display: block;
+    max-height: 90vh;
 }
+
 
 @media (max-width: 900px) {
     .sidebar {
         display: none;
-        width: 100%!important;
+        width: 100vw;
         padding-top: 4rem;
     }
 
@@ -115,7 +114,6 @@ hr {
 
 @media (max-width: 1156px) {
     .sidebar-table-item {
-        font-size: 1rem;
         padding: 0.5rem;
     }
 
