--- a/public/assets/css/noticia.css
+++ b/public/assets/css/noticia.css
@@ -1,238 +1,308 @@
+body{
+    font-family: "Exo 2", sans-serif;
+}
 
-.container{
+.noticias {
     display: flex;
+    align-items: flex-start;
+    flex: 1;
+    height: auto;
+}
+
+
+.linha {
+    width: 55% !important;
+}
+
+#cke_editor { /* This can be removed since CKEditor is no longer used */
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.noticia_create {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.form_container {
+    background-color: #F8F8F8;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: auto;
-    width: 1440px;
-    height: 1655px;
-    top: -2512px;
-    left: 8649px;
-    gap: 0px;
-    opacity: 0px;
-    padding: 100px;
+    width: 80%;
+    max-width: 80%;
+    height: 95%;
 }
 
-.cardAdd{
-    margin:auto;
-    width: 1231px;
-    height: 1268px;
-    top: 88px;
-    left: 105px;
-    gap: 0px;
-    border-radius: 20px 20px 20px 20px;
-    opacity: 0px;
-    background: #F8F8F8;
-   box-shadow: 0px 4px 4px 0px #00000040;
-}
-
-.cardAdd h1{
-    margin: auto;
-    padding: 30px;
-    width: 287px;
-    height: 74px;
-    top: 208px;
-    left: 552px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: Georgia; /*Falta importar*/
-    font-size: 65px;
+.noticias h1 {
+    width: 100%;
+    max-width: 236px;
+    font-size: 43px;
     font-weight: 400;
-    line-height: 73.85px;
-    text-align: left;
-    color: #209DD5; 
+    padding-top: 25px;
+    text-align: center;
+    color: #000000;
+    padding-bottom: 25px;
 }
 
-.cardAdd hr{
-    margin-block-start: 70px; /*provissorio*/
-
-    width: 650px;
-    height: 0px;
-    top: 327px;
-    left: 371px;
-    gap: 0px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
+.line {
+    max-width: 650px;
+    width: 100%;
+    margin: 25px 0;
+    border: 1px solid #000;
 }
 
-.divForm{
+.form_busca {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    margin: 50;
+    height: auto;
+    width: 25vw;
+    padding-bottom: 20px;
 }
 
-input{
-    margin: 10; /*provissorio*/
-    padding: 10;
-
-    border: 1px solid #000000;
-    gap: 0px;
-    border-radius: 10px 10px 10px 10px;
-    border: 1px 0px 0px 0px;
-    opacity: 0px;
-    cursor: pointer;
-
-}
-
-input::placeholder{
-/*::-vebkit-input-placeholder{*/
-    padding: 10;
-    width: 164px; 
-    height: 39px;
-    top: 583px;
-    left: 235px;
-    gap: 0px;
-    opacity: 0px;
-    
-    font-family: Georgia;
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 45.45px;
-    text-align: left;
-
-    color: #000;
-}
-
-
-#titulo, #subtitulo, #imagem{
-    width: 1016px;
-    height: 94px;
-    top: 555px;
-    left: 215px;  
-    border-radius: 10px 10px 10px 10px;
-}
-
-#desc {  
-    width: 1016px;
-    height: 393px;
-    top: 699px;
-    left: 215px;
-    border-radius: 10px 10px 10px 10px;
-}
-
-.addImg{
-    width: 1016px;
-    height: 94px;
-    
-    margin: 10; /*provissorio*/
-    padding: 10;
-
-    border: 1px solid #000000;
-
-    border-radius: 10px 10px 10px 10px;
-    border: 1px 0px 0px 0px;
-
-    cursor: pointer;
+.form_busca span {
     position: relative;
-    display: flex;
-
-
-}
-
-.addImg img{
-    width: 50px;
-    height: 50px;
-   /* top: 1164px;
-    left: 235px;*/
-    padding: 6.25px 4.17px 6.25px 4.17px;
-    /*gap: 0px;
-    opacity: 0px;*/
-}
-
-.addImg input{
-    display: none;
-}
-
-.addImg span {
-    padding-left: 20;
-    height: 39px;
-    top: 1169px;
-    left: 317px;
-    gap: 0px;
-    opacity: 0px;
-
-    font-family: Georgia;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 45.45px;
-
-    text-align: left;
+    right: 30px;
+    color: darkgray;
+    cursor: pointer;
 }
 
 .nav {
     display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
-    padding: 10;
-
-    margin-top: 250;
+    padding-top: 20px;
+    width: 90%;
 }
 
-#save, #edit{
-    width: 80px;
-    height: 70px;
-    top: 1291px;
-    left: 1246px;
-    padding: 8.33px 4.17px 8.33px 6.25px;
-    cursor: pointer;
-}
-
- #voltar{
-    width: 30px;
-    top: 1316px;
-    left: 165px;
-    border: 4px 4px 4px 4px;
-    cursor: pointer;
-    display: inline-block;
-}
-
-.voltar span{
-    width: 113px;
-    height: 39px;
-    top: 1296px;
-    left: 180px;
-
-    font-family: Georgia;
-    font-size: 40px;
-    font-weight: 400;
-    line-height: 45.45px;
-    text-align: left;
-    color: #209DD5;
-
-    padding: 10px;
-    cursor: pointer;
-}
-
-.editar {
+#noticiaForm {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    
+    justify-content: space-around;
+    width: 100%;
+    height: 70%;
+    padding-top: 35px;
 }
 
-.editar span{
-    width: 115px;
-    height: 39px;
+#noticiaForm input {
+    width: 85%;
+    height: 6vh;
+    border-radius: 20px;
+    padding: 15px;
+    background-color: none;
+}
 
-
-    font-family: Georgia;
-    font-size: 40px;
+input::placeholder{
+    color: darkgray;
+    font-size: 1rem;
     font-weight: 400;
-
-    text-align: left;
-    color: #209DD5;
-
-
-    cursor: pointer;
 }
 
-#editar{
-    width: 50px;
-    height: 50px;
-    top: 1291px;
-    left: 1256px;
-    padding: 6.25px;
-    
-    cursor: pointer;    
-    display: inline-block;
+#desc {
+    width: 85%;
+    border-radius: 20px;
+    padding: 15px;
+    background-color: none;
+}
+
+#editor-container {
+    width: 100%; /* Use 100% da largura disponível */
+    max-width: 100%; /* Não ultrapasse a largura do contêiner */
+    height: 45vh;
+    border-radius: 20px;
+    border: none;
+    overflow-y: auto; /* Adiciona uma barra de rolagem se o conteúdo for maior que a altura */
+    word-wrap: break-word; /* Quebra as palavras longas */
+    word-break: break-word; /* Quebra a linha ao atingir o limite */
+}
+
+
+.imagem{
+    width: 85%;
+    padding-top: 15px;
+}
+
+.addImg{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 15px;
+    width: 100%;
+    height: 6vh;
+    border-radius: 20px;
+    background-color: white;
+    border-style:solid;
+    border: 2px outset black;
+    background-color: none;
+}
+
+.addImg span{
+    color: darkgray;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.icon_span{
+    font-size: 1.5rem!important;
+    color: #209DD5!important;
+    padding-right: 5px!important;
+}
+
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .noticias h1 {
+        font-size: 50px;
+        line-height: 60px;
+    }
+
+    .not p {
+        font-size: 30px;
+        padding: 0;
+        text-align: center;
+    }
+
+    .not {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        align-content: center;
+        min-height: auto;
+        gap: 15px;
+        padding: 10px;
+    }
+
+    .botoes {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 15vw;
+        padding-right: 0px;
+        gap: 15px;
+    }
+
+    .botoes span {
+        background-color: #209DD5;
+        padding: 10px;
+        border-radius: 10px;
+        color: white;
+        font-size: 25px;
+    }
+
+    .utilitarios {
+        flex-direction: column-reverse;
+        align-items: center;
+        padding-bottom: 15px;
+    }
+
+    .allNoticias {
+        height: 100vh;
+    }
+
+    .form_busca {
+        width: 100%;
+    }
+
+    .form_busca label {
+        position: relative;
+        width: 0;
+        height: 0;
+        top: -10px;
+    }
+
+    #editor-container {
+        width: 90%;
+    }
+}
+
+@media (max-width: 480px) {
+    .noticias h1 {
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+    .not p {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    #editor-container {
+        height: 250px; /* Adjust for smaller screens */
+    }
+}
+
+@media (max-height: 700px) {
+    .botoes span {
+        font-size: 20px;
+        background-color: #209DD5;
+        padding: 8px;
+        border-radius: 10px;
+        color: white;
+    }
+
+    .not {
+        padding: 5px;
+        min-height: 5vh;
+        margin: 0 0 5px 0;
+    }
+
+    #editor-container {
+        height: 250px; /* Adjust for shorter viewports */
+    }
+}
+
+.ql-editor {
+    height: 35vh!important;
+    padding: 0 15px 60px 15px!important;
+}
+
+.ql-editor strong {
+    font-weight: bold !important;
+}
+
+.ql-editor em {
+    font-style: italic !important;
+}
+
+.ql-editor h1 {
+    font-size: 2em !important;
+    font-weight: bold !important;
+}
+
+.ql-editor .ql-indent-1 {
+    padding-left: 3em !important;
+}
+
+.ql-editor .ql-align-right {
+    text-align: right !important;
+}
+
+.ql-editor .ql-direction-rtl {
+    direction: rtl !important;
+}
+
+.ql-toolbar.ql-snow {
+    border:none!important;
+    font-family: "Exo 2", sans-serif!important;
+}
+
+.quill_container{
+    border: 2px outset black;
+    border-radius: 15px;
+    padding-bottom: 15px;
+    width: 85%;
+    max-width: 85%;
+    max-height: 40vh;
+    background-color: white;
+    overflow: hidden;
 }
