--- a/public/assets/css/noticiario.css
+++ b/public/assets/css/noticiario.css
@@ -2,155 +2,124 @@ body {
     padding: 40px;
 }
 
-.titulo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: 30;
-}
-
-.titulo h1 {
-    width: 100%;
-    max-width: 315px;
-    height: auto;
-    font-family: Georgia;
-    font-size: 5vw;
-    display: flex;
-    margin-bottom: 50px;
-    justify-content: center;
+.titulo{
+    font-size: 3vw;
+    font-weight: bold;
 }
 
 .ponto {
     color: #209DD5;
 }
 
-.container {
+.container{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    height: auto;
+    flex-direction: column;
 }
 
 .card_container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr 0fr);
-    gap: 1em;
-    max-width: 100%;
-    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 35px 0 50px 0;
+    justify-content: center;
+    width: 90%;
+    transition: 0.5s;
+    gap: 40px;
 }
 
-.cards {
-    overflow: hidden;
-    width: 100%;
-    max-width: 700;
-
+.cards:hover{
+    background-color: rgba(245, 244, 244, 0.808);
+    transition: 0.5s;
 }
 
-.cards img {
+.img_container_div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
+}
+
+.noticias_corpo{
+    width: 25vw;
+    height: 100%;
+}
+
+.card-img{
     object-fit: cover;
-    height: auto;
-    aspect-ratio: 4/3;
+    aspect-ratio: 16/9;
 }
-
 
 .notBar {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#ir {
-    width: 30px;
-}
-
-.notBar h2 {
-    font-family: Georgia;
-    font-size: 40px;
-    font-weight: 700;
+    justify-content: center;
+    font-size: 1.5rem;
+    font-weight: bold;
     line-height: 45.45px;
-    text-align: left;
     color: #209DD5;
-    padding: 25px 0 0 0;
 }
 
-.card-body {
-    display: flex;
-    justify-content: left;
-    padding-top: 30px;
-
-}
-
-
-.card-body p {
-    font-family: Georgia;
-    font-size: 30px;
+.card-body{
+    font-size: 1.3rem;
     font-weight: 400;
     line-height: 34.09px;
-    text-align: left;
-
+    max-height: 144px; /* Ajuste conforme necessário (linha + padding) */
     overflow: hidden;
-    text-overflow: ellipsis;
+    text-overflow: ellipsis; /* Adiciona "..." no final do texto */
     display: -webkit-box;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 4; /* Número máximo de linhas */
     -webkit-box-orient: vertical;
+    text-align: justify;
+}
 
+
+/* Define o tamanho dos cards */
+.cards {
+    display: flex;
+    flex: 0 1 calc(50% - 50px);
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
+    border: 1px;
+    border-radius: 10px;
+    height: 100%;
+    padding: 5px;
+    border-style: solid!important;
+    border-color: black!important;
+    transition: 0.5s;
+}
+
+
+/* Ajustes para tamanhos de tela menores */
 @media (max-width: 1024px) {
-    h1 {
+    .titulo {
         font-size: 48px;
     }
 
-    .notBar h2 {
+    .notBar {
         font-size: 32px;
     }
 
-    .card-body p {
+    .card-body  {
         font-size: 24px;
     }
 }
 
 @media (max-width: 768px) {
-    h1 {
+    .titulo {
         font-size: 55px;
     }
 
     .notBar {
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .notBar h2 {
         font-size: 30px;
         font-weight: 300;
         line-height: 30px;
-        padding: 15px 0 0 0;
     }
 
-    #ir {
-        width: 20px;
-    }
-
-    .card-body p {
+    .card-body  {
         font-size: 20px;
     }
 
-    .container {
-        height: 70%;
-    }
-
-    .card_container {
-        display: flex;
-        flex-direction: column;
-        margin: 10;
-        max-width: 100%;
-
-    }
-
     .cards {
-        overflow: hidden;
-        width: 100%;
-        max-width: 330;
-        margin: 15px;
+        flex: 0 1 100%; /* Para mobile: 1 card por linha */
     }
-
+}
