--- a/public/assets/css/ver-noticia.css
+++ b/public/assets/css/ver-noticia.css
@@ -1,96 +1,83 @@
-.container h1 {
-    width: 80%; 
-    height: auto; 
-    margin: 0; 
-    padding: 15px;
-    
-    font-family: Georgia;
-    font-size: 3em; 
-    font-weight: 400;
-    line-height: 1.2; 
-    letter-spacing: -0.05em;
-    text-align: left;
+body{
+    max-width: 100vw;
+    height: auto;
+    font-family: "Exo 2", sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
+}
+
+.container{
+    max-width: 85%;
+}
+
+.titulo{
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 3rem;
+    text-align: center;
     color: #209DD5;
-    margin-bottom: 1%; /
 }
 
-.container  {
-    width: 100vw; 
- 
-    font-family: Georgia;
-    font-size: 2.5em;
-    font-weight: 400;
-    line-height: 1.2;
-    text-align: left;
-
-    color: #A0A0A0;
-}
-.container img {
-    width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
-    height: 643px; 
+.img_noticia {
+    width: 100vw; /* Ajusta a imagem para 100% do contêiner pai */
+    height: 60vh;
     object-fit: cover;
 
 }
 
-.container h3{
+.data_publi{
     font-size: 10;
+    color: rgb(211, 211, 211);
+    padding: 0 0rem 1rem 0rem;
 }
 
-.container h2{
-    margin: 15;
+.subtitulo{
+    padding: 0 0 1rem 0rem;
+    font-size: 2rem;
 }
 
 .container p{
-    margin: 15;
-}
-
-p {
-    width: 90%; 
-    max-width: 1324px; 
-    height: auto; 
-    padding: 25px;
-
-
-    font-family: Georgia;
-    font-size: 1.5em;
+    width: 100%;
+    height: auto;
+    padding: 0.5rem 0 0.5rem 0;
+    line-height: 1.8rem;
+    font-size: 1.3rem;
     font-weight: 400;
-    line-height: 1.2; 
-    text-align: left;
-
+    text-align: justify;
     color: #000000;
 }
+
 
 .volteBar {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 10px;
-    margin-top: 5%; 
 }
 
 .voltar {
     display: flex;
     align-items: center;
     cursor: pointer;
+    padding-left: 3rem;
 }
 
 #voltar{
-    width: 2em; 
+    width: 1.5em;
     height: auto;
     border: 4px 4px 4px 4px;
 }
 
 .voltar span{
-    font-family: Georgia;
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: 400;
     line-height: 1.2;
     text-align: left;
     color: #209DD5;
-
-    padding: 10px;
     cursor: pointer;
+    padding-left: 5px;
 }
 
 
@@ -102,28 +89,28 @@ p {
 
     .container img {
         width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
-        height: auto; 
+        height: auto;
         object-fit: cover;
     }
 }
 
 @media (max-width: 768px) {
     .container h1, h2, p {
-        font-size: 2em; 
+        font-size: 2em;
     }
 
     .volteBar {
-        padding: 3px; 
+        padding: 3px;
     }
 
     #voltar {
-        width: 1.5em; 
+        width: 1.5em;
     }
     .container img {
         width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
-        height: auto; 
+        height: auto;
         object-fit: cover;
-    
+
     }
 }
 
