--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -66,3 +66,16 @@ img{
     width: 450px;
     text-align: center;
 }
+
+@media (max-width: 768px) {
+    .login_container{
+        width: 90vw;
+    }
+    .footer{
+        width: 100%;
+    }
+
+    img{
+        width: 70vw;
+    }
+}
