--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -157,6 +157,7 @@ main {
 }
 
 .section-legislacao-description {
+    line-height: normal;
     font-size: 1.5rem;
     display: -webkit-box;
     -webkit-line-clamp: 10;
@@ -242,7 +243,7 @@ main {
 
 .carrossel-item {
     position: relative;
-    background-image: linear-gradient(0deg, rgba(12, 124, 189, 0.925) 35% , rgba(82, 181, 238, 0.801) 100%);
+    background-image: linear-gradient(0deg, rgba(12, 124, 189, 0.925) 35%, rgba(82, 181, 238, 0.801) 100%);
     border-radius: 20px;
 }
 
@@ -250,7 +251,7 @@ main {
     position: absolute;
     bottom: 10px;
     left: 10px;
-    color:white;
+    color: white;
     font-weight: 700;
     font-size: 22px;
     word-break: normal;
@@ -366,12 +367,12 @@ main {
     transition: ease-in-out 0.2s;
 }
 
-.legislacao_index_container{
+.legislacao_index_container {
     display: flex;
     flex-direction: column;
 }
 
-.legislacao_index_container a{
+.legislacao_index_container a {
     padding-top: 5px;
     font-weight: bold;
     color: #209DD5;
@@ -462,11 +463,11 @@ main {
         padding: 1rem 2rem !important;
     }
 
-    .section-noticias-title{
+    .section-noticias-title {
         font-size: 1.5rem !important;
     }
 
-    .form-title{
+    .form-title {
         font-size: 1.5rem !important;
     }
 
@@ -486,7 +487,7 @@ main {
         flex-direction: column;
     }
 
-    .section-legislacao-description{
+    .section-legislacao-description {
         font-size: 1.3rem;
     }
 
@@ -551,7 +552,7 @@ main {
         padding: 1rem 2rem;
     }
 
-    .form-title{
-        font-size: 2rem!important;
+    .form-title {
+        font-size: 2rem !important;
     }
 }
