--- a/public/assets/css/noticiario.css
+++ b/public/assets/css/noticiario.css
@@ -52,6 +52,7 @@ body {
 
 .notBar {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     font-size: 1.5rem;
     font-weight: bold;
