--- a/public/assets/css/ver-noticia.css
+++ b/public/assets/css/ver-noticia.css
@@ -1,4 +1,4 @@
-body{
+body {
     max-width: 100vw;
     height: auto;
     font-family: "Exo 2", sans-serif;
@@ -8,37 +8,47 @@ body{
 
 }
 
-.container{
+.container {
     max-width: 85%;
 }
 
-.titulo{
+.titulo {
     font-size: 2rem;
     font-weight: bold;
-    padding: 3rem;
+    padding: 1.5rem;
     text-align: center;
     color: #209DD5;
 }
 
+.categoria {
+    font-size: 2rem;
+    font-weight: bold;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    text-align: center;
+    color: #075d85;
+}
+
 .img_noticia {
-    width: 100vw; /* Ajusta a imagem para 100% do contêiner pai */
+    width: 100vw;
+    /* Ajusta a imagem para 100% do contêiner pai */
     height: 60vh;
     object-fit: cover;
 
 }
 
-.data_publi{
+.data_publi {
     font-size: 10;
     color: rgb(211, 211, 211);
     padding: 0 0rem 1rem 0rem;
 }
 
-.subtitulo{
+.subtitulo {
     padding: 0 0 1rem 0rem;
     font-size: 2rem;
 }
 
-.container p{
+.container p {
     width: 100%;
     height: auto;
     padding: 0.5rem 0 0.5rem 0;
@@ -64,13 +74,13 @@ body{
     padding-left: 3rem;
 }
 
-#voltar{
+#voltar {
     width: 1.5em;
     height: auto;
     border: 4px 4px 4px 4px;
 }
 
-.voltar span{
+.voltar span {
     font-size: 2em;
     font-weight: 400;
     line-height: 1.2;
@@ -82,20 +92,27 @@ body{
 
 
 @media (max-width: 1200px) {
-    h1, h2, p {
+
+    h1,
+    h2,
+    p {
         font-size: 2em;
     }
 
 
     .container img {
-        width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
+        width: 100%;
+        /* Ajusta a imagem para 100% do contêiner pai */
         height: auto;
         object-fit: cover;
     }
 }
 
 @media (max-width: 768px) {
-    .container h1, h2, p {
+
+    .container h1,
+    h2,
+    p {
         font-size: 2em;
     }
 
@@ -106,13 +123,12 @@ body{
     #voltar {
         width: 1.5em;
     }
+
     .container img {
-        width: 100%; /* Ajusta a imagem para 100% do contêiner pai */
+        width: 100%;
+        /* Ajusta a imagem para 100% do contêiner pai */
         height: auto;
         object-fit: cover;
 
     }
 }
-
-
-
